--- a/baystateMarathonProjectStyles.css
+++ b/baystateMarathonProjectStyles.css
@@ -22,6 +22,9 @@ html {
 	background: linear-gradient(to right, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 	padding: .1rem .1rem .1rem .1rem;
 }
+#scheduleRow {
+	width: 100%;
+}
 hr {
 	width: 50%;
 	height: 1px;
