--- a/baystateMarathonProjectStyles.css
+++ b/baystateMarathonProjectStyles.css
@@ -92,14 +92,14 @@ table tr:not(#days) td:not(.otherMonth):not(#raceDay):not(.week1):not(.week2):no
 .alignedImage>a {
 	color: white;
 }
-.week1, .week2, .week3, .week4, .week5 {
+.week1, .week2, .week3, .week4, .week5, .week6 {
 	background-color: lightgray;
 	background-image: url(static/gradient.jpg);
 	background-size: cover;
     background-position: center;
     background-attachment: fixed;
 }
-.week6, .week7, .week8, .week9 , .week10 , .week11 , .week12, .week13, .week14, .week15, .week16, .week17, .week18 {
+.week7, .week8, .week9 , .week10 , .week11 , .week12, .week13, .week14, .week15, .week16, .week17, .week18 {
 	background-color: gray;
 }
 
